--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "devDependencies": {
     "@parcel/config-default": "^2.0.0",
-    "@parcel/transformer-pug": "2.0.0",
-    "@parcel/transformer-sass": "^2.1.1",
+    "@parcel/transformer-pug": "^2.0.0",
+    "@parcel/transformer-sass": "^2.8.3",
     "auto-bind": "^4.0.0",
     "normalize-wheel": "^1.0.1",
     "parcel": "^2.8.3",
