--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@parcel/config-default": "^2.0.0",
     "@parcel/transformer-pug": "^2.0.0",
     "@parcel/transformer-sass": "^2.8.3",
+    "@types/node": "^18.16.3",
     "auto-bind": "^4.0.0",
     "normalize-wheel": "^1.0.1",
     "parcel": "^2.8.3",
