--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "normalize-wheel": "^1.0.1",
     "parcel": "^2.8.3",
     "parcel-reporter-static-files-copy": "^1.3.0",
+    "path-browserify": "^1.0.1",
     "prefix": "^1.0.0",
+    "process": "^0.11.10",
     "sass": "^1.26.8"
   },
   "dependencies": {
